# calfuse

./: .gitignore  .travis.yml  INSTALL  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
contrib/: README  download_data
doc/: FIXING_SELINUX_ISSUES  INSTALLING_A_FORTRAN_COMPILER  INSTALLING_CalFUSEv3.2.3  INTRO_TO_CalFUSEv3.2.3  Makefile.am  Makefile.in
docs/: pipeline_status.html
idl/: cf_obsplot.pro  cf_plot_extract3.pro  cf_plot_rate3.pro  cf_plot_rate_linear.pro  fuse_extract.pro  fuse_sic_only.pro
include/: calfitsio.h  calfuse.h  fusebuf.h  sgp4.h
parmfiles/: bchr1a003.fit  bchr1b003.fit  bchr2a003.fit  bchr2b003.fit  parm1a015.fit  parm1b015.fit  parm2a015.fit  parm2b015.fit  scrn1a015.fit  scrn1b015.fit  scrn2a015.fit  scrn2b015.fit
scripts/: Makefile.am  Makefile.in  calfuse.csh  calfuse.sh  calfuse.wavecal  cf_make_900_obs.csh  cf_make_all.csh  cf_make_all.csh.in  cf_make_all_obs.csh  cfsetup.csh.in  cfsetup.sh.in
src/: Makefile.Linux.orig  Makefile.Linux64.orig  Makefile.MacOSX.orig  Makefile.am  Makefile.in  Makefile.orig.orig  configure.linux.orig  configure.linux64.orig  configure.macosx.orig  configure.solaris.orig
src/analysis/: Makefile.Linux.orig  Makefile.Linux64.orig  Makefile.MacOSX.orig  Makefile.Solaris.orig  Makefile.am  Makefile.in  bpm_combine.c  cf_arith.c  cf_coadd.c  cf_combine.c  cf_make_900_obs.csh  cf_make_all_exp.c  cf_make_all_obs.csh  cf_nvo.c  cf_pack.c  cf_reflux.c  cf_ttag_to_hist.c  cf_wrspec7.c  cf_wrspec_cf2.c  cf_xcorr.c  extract_jitter.c  get_shift.c  gethmjd.c  idf_combine.c  idf_cut.c  idf_screen.c  mjd2hjd.c  modhead.c  remove_target_orbital_motion.c  ttag_combine.c  ttag_lightcurve.c  ttag_lightcurve_channel_sum.c  ttag_lightcurve_combine.c  ttag_lightcurve_mjd2hmjd.c  ttag_lightcurve_periodogram.c
src/cal/: Makefile.am  Makefile.in
src/cal/geom/: Makefile.am  Makefile.in  Makefile.orig.orig  make_geom_file  make_geom_file.c
src/cal/get_tle/: GetTLE.java  GetTLE.java.in  Makefile.am  Makefile.in  add_tle.pl  add_tle.pl.in  check_tle.pl  check_tle.pl.in  check_tle.pro  get_tle.pl  get_tle.pl.orig  get_tle.pl.space-track  get_tle.pl.space-track.in  make_cvzramtool.pl  make_cvzramtool.pl.in  make_orbit.pl  make_orbit.pl.in  test_get_tle.pl.in  test_tle.csh  update_tle.csh  update_tle.csh.in
src/cal/get_tle/tmp/: FUSE.TLE  FUSE.TLE.NEW  FUSE.TLE.awf  FUSE.TLE.kruk  add_tle.pl  five.tle.orig  get_tle.logfile  get_tle.pl  update_tle.csh
src/cal/jitter/: Makefile.Linux.orig  Makefile.Linux64.orig  Makefile.MacOSX.orig  Makefile.am  Makefile.in  Makefile.orig.orig  cf_jitter.c  cf_jitter_diag.c
src/cal/parm/: Makefile.am  Makefile.in  Makefile.orig.orig  make_parm_file.c
src/cal/saa/: Makefile.am  Makefile.in  Makefile.orig.orig  make_saa_file.c
src/cal/screen/: Makefile.am  Makefile.in  Makefile.orig.orig  make_screen_file  make_screen_file.c
src/fes/: Makefile.Linux.orig  Makefile.Linux64.orig  Makefile.Solaris.orig  Makefile.am  Makefile.in  cf_calfes.c  cf_calfes.h  cf_cp_hdr.c  cf_fes_apply_bias.c  cf_fes_apply_flat.c  cf_fes_apply_mask.c  cf_fes_cal.c  cf_fes_get_cal_image.c  cf_fes_init.c  cf_fes_read.c  cf_fes_write.c  cf_limbang.c
src/fuv/: Makefile.Linux.orig  Makefile.Linux64.orig  Makefile.MacOSX.orig  Makefile.am  Makefile.in  Makefile.orig.orig  cf_assign_wavelength.c  cf_bad_pixels.c  cf_convert_to_farf.c  cf_countmap.c  cf_extract_spectra.c  cf_flux_calibrate.c  cf_gainmap.c  cf_hist_init.c  cf_remove_motions.c  cf_screen_photons.c  cf_ttag_init.c
src/include/: config.h.in
src/libcf/: Makefile.Linux.orig  Makefile.Linux64.orig  Makefile.MacOSX.orig  Makefile.am  Makefile.in  Makefile.orig.orig  calfits.c  cf_active_region.c  cf_apply_dead_time.c  cf_apply_filters.c  cf_astig_farf.c  cf_astigmatism.c  cf_cal_file.c  cf_calculate_y_centroid.c  cf_calculate_ycent_motion.c  cf_check_digitizer.c  cf_convert_to_ergs.c  cf_count_rate_y_distort.c  cf_dispersion.c  cf_doppler_and_heliocentric.c  cf_electronics_dead_time.c  cf_error_msg.c  cf_extraction_limits.c  cf_fes_proc_check.c  cf_fes_proc_update.c  cf_fifo_dead_time.c  cf_find_spectra.c  cf_fpa_position.c  cf_fuv_init.c  cf_geometric_distort.c  cf_grating_motion.c  cf_header_io.c  cf_identify_channel.c  cf_idf_io.c  cf_ids_dead_time.c  cf_init_support.c  cf_make_mask.c  cf_make_wave_array.c  cf_mirror_motion.c  cf_modify_hist_pha.c  (+45 more)
src/slalib/: Makefile.am  Makefile.in  altaz.f  create.com  dm2av.f  gresid.f  gresid.f_alpha_OSF1  gresid.f_convex  gresid.f_ix86_Linux  gresid.f_mips  hfk5z.f  makefile.orig  mappa.f  mapqk.f  mk  nutc.f  obs.f  pcd.f  pm.f  put.com  random.f  random.f_alpha_OSF1  random.f_convex  random.f_mips  random.f_x86_64  rcc.f  read.me  refcoq.f  refro.f  rep.bat  sep.f  sla.news  sla_test.f  sun67.htx_tar  sun67.tex  unpcd.f  wait.f
src/slalib/sun67.htx/: footnode.html  images.pl  images.tex  internals.pl  labels.pl  node1.html  node10.html  node100.html  node101.html  node102.html  node103.html  node104.html  node105.html  node106.html  node107.html  node108.html  node109.html  node11.html  node110.html  node111.html  node112.html  node113.html  node114.html  node115.html  node116.html  node117.html  node118.html  node119.html  node12.html  node120.html  node121.html  node122.html  node123.html  node124.html  node125.html  node126.html  node127.html  node128.html  node129.html  node13.html  (+195 more)
